# aicore-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
aic/: __main__.py  cli.py  client.py  deploy.py  docker.py  s3.py  setup.py  ui.py
