[project]
name = "aicore-cli"
version = "1.0.0"
description = "CLI tool for deploying custom models on SAP AI Core"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "ai-core-sdk>=2.5.7",
    "ai-api-client-sdk>=1.35.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
]

[project.scripts]
aic = "aic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aic"]

[tool.ruff]
line-length = 200
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PL"]
ignore = ["PLR0913", "PLR2004"]
